--- a/news_json.html
+++ b/news_json.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News List</title>
+    <title>News from JSON</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .pagination {
-            margin: 20px 0;
-        }
         .card-img-top {
             height: 200px;
             object-fit: cover;
@@ -30,35 +27,33 @@
                 <li class="nav-item">
                     <a class="nav-link" href="sign_up.html">Sign up</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="news_json.html">News from JSON</a>
-                </li>
             </ul>
         </div>
     </nav>
 
-
+    <!-- News Cards -->
     <div class="container mt-5">
-        <h2 class="text-center mb-4">News List</h2>
+        <h2 class="text-center mb-4">News from JSON</h2>
         
-        <!-- Filter -->
+        <!-- Search Filter -->
         <div class="mb-3">
-            <input type="text" id="filterInput" class="form-control" placeholder="Search news...">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search news by title...">
         </div>
-
-        <!-- News Cards -->
+        
+        <!-- News Cards Section -->
         <div class="row" id="newsContainer">
+            <!-- News cards will be dynamically inserted here -->
         </div>
 
-        <!-- Pagination -->
+        <!-- Pagination Controls -->
         <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center" id="pagination">
-
+            <ul class="pagination justify-content-center" id="paginationControls">
+                <!-- Pagination buttons will be dynamically inserted here -->
             </ul>
         </nav>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="main.js"></script>
+    <script src="news_json.js"></script>
 </body>
 </html>
