--- a/sign_up.html
+++ b/sign_up.html
@@ -5,12 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .error-message {
+            color: red;
+            font-size: 0.875rem;
+            margin-top: 0.25rem;
+        }
+        .border-red-500 {
+            border-color: red !important;
+        }
+        .border-green-500 {
+            border-color: green !important;
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">News</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -21,28 +34,40 @@
                 <li class="nav-item">
                     <a class="nav-link" href="sign_up.html">Sign up</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="news_json.html">News from JSON</a>
+                </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Sign Up Form -->
     <div class="container mt-5">
-        <h2 class="text-center mb-4">Sign Up to View News</h2>
+        <h2 class="text-center mb-4">Sign Up to get daily personalized updates</h2>
         <form id="signUpForm" class="needs-validation" novalidate>
             <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" required>
-                <div class="invalid-feedback">Name is required.</div>
+                <label for="fullName" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="fullName" required>
+                <div class="error-message"></div>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" required>
-                <div class="invalid-feedback">Please enter a valid email.</div>
+                <div class="error-message"></div>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" required>
-                <div class="invalid-feedback">Password is required.</div>
+                <div class="error-message"></div>
+            </div>
+            <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" id="confirmPassword" required>
+                <div class="error-message"></div>
+            </div>
+            <div class="mb-3">
+                <label for="dob" class="form-label">Date of Birth</label>
+                <input type="date" class="form-control" id="dob" required>
+                <div class="error-message"></div>
             </div>
             <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
